objects/Customer_Success__c.object
<CustomObject>
    <fields>
        <fullName>Account_Health_Code_Summary__c</fullName>
        <inlineHelpText>Required if the Account Health is Red.</inlineHelpText>
        <label>Account Health Code Summary</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_Health_Color__c</fullName>
        <formula>If(Text(Account_Health__c)=&quot;Red&quot;, IMAGE(&quot;https://toppng.com/uploads/preview/red-dot-icon-png-bowling-ball-transparent-background-11562953794gu3xfby6c8.png&quot;, &quot;RED&quot;, 25,25), If(Text(Account_Health__c)=&quot;Yellow&quot;, IMAGE(&quot;https://img.pngio.com/filegaudit-yellowdotpng-wikimedia-commons-yellow-dot-png-460_460.png&quot;, &quot;YELLOW&quot;, 25,25), IMAGE(&quot;https://icon2.cleanpng.com/20180328/tsq/kisspng-circle-n-carpet-cleaning-upland-green-dot-corporat-dots-5abb905aa15890.9523326215222416266609.jpg&quot;, &quot;GREEN&quot;, 25,25)))</formula>
        <label>Account Health (Color)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Health__c</fullName>
        <label>Account Health</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                    <color>#419249</color>
                    <label>Green</label>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                    <color>#F3D904</color>
                    <label>Yellow</label>
                </value>
                <value>
                    <fullName>Red</fullName>
                    <color>#A53711</color>
                    <label>Red</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Success</relationshipLabel>
        <relationshipName>Customer_Success_Object</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DevOps_Maturity_Level__c</fullName>
        <label>DevOps Maturity Level</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Latest_CS_Record__c</fullName>
        <formula>CreatedDate ==  Account_Name__r.Customer_Success_Last_Created_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Latest CS Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NPS__c</fullName>
        <label>NPS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <label>Next Steps</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Customer Success</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Account_Health__c</columns>
        <columns>DevOps_Maturity_Level__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Latest_CS_Record__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CS-{0000000}</displayFormat>
        <label>Customer Success Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Success</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Account_Health_Red</fullName>
        <active>true</active>
        <description>Account Health Code Summary required if the Account Health is Red.</description>
        <errorConditionFormula>AND(
  ISBLANK(Account_Health_Code_Summary__c ),
  ISPICKVAL(Account_Health__c, &quot;Red&quot;)
)</errorConditionFormula>
        <errorMessage>Account Health Code Summary is required when the Health Code is Red.</errorMessage>
    </validationRules>
</CustomObject>